--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-dojo": "^1.1.1",
     "grunt-gh-pages": "^1.0.0",
     "grunt-processhtml": "^0.3.13",
