--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "templater",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A tool that needs a better name",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/agrc/templater#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-bump": "^0.7.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dojo": "^1.1.1",
