--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "grunt": "^0.4.5",
     "grunt-bump": "^0.7.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jasmine": "^1.0.3",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dojo": "^1.1.1",
     "grunt-gh-pages": "^1.0.0",
