Add "Featured" checkbox and "Tags" input
switch to handlebars for templating
mark required fields

Closes #6

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ src/dijit/
 src/dojo/
 src/dojox/
 src/favico.js/
+src/handlebars/
 src/jasmine-favicon-reporter/
 src/jasmine-jsreporter/
 src/jquery/
