feat: rebuild in React/Vite

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,24 @@
-_SpecRunner.html
-.grunt/
-dist/
-node_modules/
-src/bootstrap-css-only/
-src/components-jasmine/
-src/dijit/
-src/dojo-themes/
-src/dojo/
-src/dojox/
-src/favico.js/
-src/handlebars/
-src/jasmine-favicon-reporter/
-src/jasmine-jsreporter/
-src/jquery/
-src/lodash/
-src/util/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
