--- a/package.json
+++ b/package.json
@@ -1,35 +1,79 @@
 {
-  "name": "templater",
-  "version": "1.3.0",
-  "description": "A tool that needs a better name",
-  "main": "index.js",
+  "name": "vite-project",
+  "version": "2.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build",
+    "deploy": "vite build && echo > dist/.nojekyll && gh-pages -d dist",
+    "format": "prettier . --write",
+    "preview": "vite preview",
+    "start": "vite"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/agrc/templater.git"
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true
   },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/agrc/templater/issues"
-  },
-  "homepage": "https://github.com/agrc/templater#readme",
-  "devDependencies": {
-    "grunt": "^1.5.3",
-    "grunt-bump": "^0.8.0",
-    "grunt-contrib-clean": "^2.0.1",
-    "grunt-contrib-connect": "^3.0.0",
-    "grunt-contrib-jasmine": "^3.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-dojo": "^1.1.1",
-    "grunt-gh-pages": "^4.0.0",
-    "grunt-processhtml": "^0.4.3",
-    "load-grunt-tasks": "^5.1.0",
-    "uglify-js": "^3.17.4"
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es2022": true,
+      "node": true
+    },
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "plugins": [
+      "react",
+      "prettier",
+      "import",
+      "react-hooks"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:react/jsx-runtime",
+      "plugin:react-hooks/recommended",
+      "plugin:import/recommended",
+      "plugin:jsx-a11y/recommended",
+      "prettier"
+    ],
+    "ignorePatterns": [
+      "dist/**"
+    ]
   },
   "dependencies": {
-    "lodash-amd": "^4.17.13"
+    "handlebars": "^4.7.7",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^4.0.0",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "prettier-plugin-organize-imports": "^3.2.1",
+    "prettier-plugin-packagejson": "^2.3.0",
+    "tailwindcss": "^3.2.4",
+    "vite": "^3.2.3"
   }
 }
