--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
