--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,8 @@ updates:
     directory: /
     schedule:
       interval: monthly
-      groups:
-        safe-dependencies:
-          update-types: ['minor', 'patch']
-        major-dependencies:
-          update-types: ['major']
+    groups:
+      safe-dependencies:
+        update-types: [minor, patch]
+      major-dependencies:
+        update-types: [major]
