--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,5 +42,10 @@ jobs:
     if: github.ref_name == 'main' && needs.release-please.outputs.release_created
 
     steps:
+      - name: ⬇️ Set up code
+        uses: actions/checkout@v4
+        with:
+          show-progress: false
+
       - name: 🚀 Deploy
         run: npm run deploy
