--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,6 @@ updates:
         update-types: [minor, patch]
       major-dependencies:
         update-types: [major]
+    commit-message:
+      prefix: deps
+      prefix-development: deps(dev)
