chore: add github actions ecosystem

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,21 @@
 version: 2
 updates:
-  - package-ecosystem: npm
+  - package-ecosystem: pip
     directory: /
     schedule:
       interval: monthly
     groups:
       safe-dependencies:
-        update-types: [minor, patch]
+        update-types: ['minor', 'patch']
       major-dependencies:
-        update-types: [major]
+        update-types: ['major']
     commit-message:
       prefix: deps
       prefix-development: deps(dev)
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: monthly
+    groups:
+      ci-dependencies:
+        dependency-type: 'production'
